add google analytics

--- a/gb-web/src/template.html
+++ b/gb-web/src/template.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>React App</title>
+  <title>GoodBlocks | Blockchain for Social Good Browser</title>
+	<!--  OG Info -->
+	<meta property="og:title" content="Blockchain for Social Good" />
+	<meta property="og:site_name" content="GoodBlocks" />
+	<meta property="og:type" content="website" />
+	<meta property="og:description" content="GoodBlocks " />
+	<meta property="og:image" content="image/goodblocks.png"/>
+	<meta property="og:url" content="https://goodblocks.vessels.tech" />
+
 	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.1/css/tachyons.min.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96659293-4"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-96659293-4');
+	</script>
+
 </head>
 <body>
   <div class="container">
