--- a/gb-web/src/template.html
+++ b/gb-web/src/template.html
@@ -8,8 +8,16 @@
 	<meta property="og:site_name" content="GoodBlocks" />
 	<meta property="og:type" content="website" />
 	<meta property="og:description" content="GoodBlocks " />
-	<meta property="og:image" content="image/goodblocks.png"/>
+	<meta property="og:image" content="https://goodblocks.vessels.tech/images/goodblocks.png"/>
 	<meta property="og:url" content="https://goodblocks.vessels.tech" />
+
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="Browse Blockchain for Social Good Projects">
+	<meta name="twitter:site" content="@vesselstech">
+	<meta name="twitter:title" content="Blockchain for Social Good">
+	<meta name="twitter:description" content="Goodblocks displays data from the Blockchain for Social Good Google Sheet">
+	<meta name="twitter:creator" content="@lewdaly">
+	<meta name="twitter:image" content="https://goodblocks.vessels.tech/images/goodblocks.png">
 
 	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.1/css/tachyons.min.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
